<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline01"
            app:layout_constraintGuide_percent="0.02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline02"
            app:layout_constraintGuide_percent="0.32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <ImageView
            app:layout_constraintBottom_toBottomOf="@id/guideline02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline01"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="70dp"
            android:src="@drawable/color_logo___no_background" />

        <RelativeLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline02"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/email"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPassWord"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/etUserName"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPassWord"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/forgot_pass"
                android:textColor="@color/app_main_color4"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/tvForgotPass"
                android:layout_margin="30dp"
                android:background="@drawable/button_add_to_cart"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/tvForgotPass"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_add_to_cart"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/btnLogin"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/custom_btn_nobackground"
                android:text="@string/sign_up"
                android:textColor="@color/app_main_color"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnRegister"
                android:layout_centerHorizontal="true"
                android:scaleX=".5"
                android:scaleY=".5" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>