<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline01"
            app:layout_constraintGuide_percent="0.07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline02"
            app:layout_constraintGuide_percent="0.35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <RelativeLayout
            android:id="@+id/vBack"
            app:layout_constraintBottom_toBottomOf="@id/guideline01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/btnComeback"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:background="@drawable/custom_btn_comeback"
                android:src="@drawable/icon_comeback" />
        </RelativeLayout>

        <ImageView
            app:layout_constraintBottom_toBottomOf="@id/guideline02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline01"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="70dp"
            android:src="@drawable/color_logo___no_background" />

        <RelativeLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline02"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <EditText
                android:id="@+id/etNewUserName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/new_username"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etNewEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/etNewUserName"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/new_email"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etNewPassWord"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/etNewEmail"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etRepeatPassWord"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/etNewPassWord"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/etRepeatPassWord"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_add_to_cart"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnRegister"
                android:layout_centerHorizontal="true"
                android:scaleX=".5"
                android:scaleY=".5" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>