<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/vOrderProduct"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/imgMyOrderHerbal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvOrderProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/vOrderProduct"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvOrderProductCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/vOrderProduct"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/btnOrderDelete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/icon_delete" />

        <Button
            android:id="@+id/btnOrderDecrease"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_toStartOf="@id/tvOrderQuantity"
            android:background="@drawable/button_in_dec_nofill"
            android:text="@string/decrease"
            android:textColor="@color/app_main_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvOrderQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@id/btnOrderIncrease"
            android:text="@string/startValue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnOrderIncrease"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_inc_dec_fill"
            android:text="@string/increase"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>