<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.93" />

        <FrameLayout
            android:id="@+id/fragmentID"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline01"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <LinearLayout
            android:background="@color/white"
            android:paddingTop="5dp"
            android:baselineAligned="false"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline01">

            <LinearLayout
                android:id="@+id/vHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/imgHome"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon_home_nofill"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:text="@string/icon_home"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vFavorites"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/imgFavorites"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon_favorite_basic"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/tvFavorites"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:text="@string/icon_favorite"
                    android:textSize="12sp" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/vCart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/imgCart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon_cart_nofill"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/tvCart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:text="@string/icon_cart"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vNotification"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/imgNotification"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon_notification"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/tvNotification"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:text="@string/icon_notification"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vMe"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/imgMe"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon_me_nofill"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/tvMe"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top|center"
                    android:text="@string/icon_me"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>