<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/vOnClickItemCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/vProduct"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imgMyCartHerbal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/vProduct"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvProductCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/vProduct"
                android:textSize="20sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/icon_delete" />

        <Button
            android:id="@+id/btnDecreaseCart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_toStartOf="@id/tvQuantity"
            android:background="@drawable/button_in_dec_nofill"
            android:text="@string/decrease"
            android:textColor="@color/app_main_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@id/btnIncreaseCart"
            android:text="@string/startValue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnIncreaseCart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_inc_dec_fill"
            android:text="@string/increase"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>