<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92"
            android:id="@+id/guideline01"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/guideline02"
            app:layout_constraintGuide_percent="0.07"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:id="@+id/vBack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline02">

            <ImageView
                android:id="@+id/btnComeback"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:background="@drawable/custom_btn_comeback"
                android:src="@drawable/icon_comeback" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btnAddFavorite"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/icon_favorite_nofill" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline02"
            app:layout_constraintBottom_toBottomOf="@id/guideline01">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/vHerbalDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/imgHerbalDetail"
                        android:layout_width="280dp"
                        android:layout_height="280dp"
                        android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/tvHerbalNameDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vHerbalDetail"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/tvHerbalPriceDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvHerbalNameDetail"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvHerbalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvHerbalPriceDetail"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/about"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/tvHerbalDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvHerbalTitle"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp" />
            </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline01"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <Button
                android:id="@+id/btnDecrease"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:background="@drawable/button_in_dec_nofill"
                android:text="@string/decrease"
                android:textColor="@color/app_main_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/btnDecrease"
                android:text="@string/startValue"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnIncrease"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/tvValue"
                android:background="@drawable/button_inc_dec_fill"
                android:text="@string/increase"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnAddToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/btnIncrease"
                android:background="@drawable/button_add_to_cart"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>